# armquantlab

./: LICENSE  README.md  pyproject.toml
docs/: index.html  player.css
docs/media/: ArmQuantLab_Demo_en.srt
evidence/: benchmark-report.json  benchmark-summary.md  freeze-receipt.json
models/: fixture-fp32.onnx  fixture-int8.onnx  fixture-source.onnx
scripts/: build_demo_frames.py  freeze_evidence.py  package_release.py  render_demo.swift  verify_release.py
src/armquantlab/: __init__.py  benchmark.py  cli.py  model.py  optimize.py
submission/: DEMO_SCRIPT.md  DEVPOST_DRAFT.md  RELEASE_CHECKLIST.md  VIDEO_BUILD.md  VIDEO_COMPOSITION.md  YOUKU_PUBLICATION_PACKET_zh.md  YOUTUBE_PUBLICATION_PACKET.md
tests/: test_armquantlab.py
