[project]
name = "armquantlab"
version = "0.1.0"
description = "Reproducible FP32-to-INT8 ONNX optimization evidence on Arm64"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "ArmQuantLab contributors" }]
dependencies = [
  "numpy>=2.1,<3",
  "onnx>=1.18,<2",
  "onnxruntime>=1.22,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
armquantlab = "armquantlab.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/armquantlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
